// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handle > Error 1`] = `
"
 ERROR  General Error: title

  at src/lib/error.test.ts:87:15
  at __locale__
  at runWithSuite __locale__
  at Object.collect __locale__
  at Object.collect __locale__
  at collectTests __locale__
  at startTests __locale__
  at __locale__
  at withEnv __locale__
  at run __locale__


"
`;

exports[`handle > ScaffdogAggregateError 1`] = `
"
 ERROR  Parsing Error AggregateError message

    message

    2 issues found
    - INVALID_TYPE: Expected string, received number (in \\"foo\\")
    - INVALID_TYPE: Expected number, received string (in \\"bar.baz\\")

    AggregateError message


"
`;

exports[`handle > ScaffdogError - with source 1`] = `
"
 ERROR  Compile Error

       \\"foo\\" is not defined:

     > │ {{ foo }}
       │    ^^^

"
`;

exports[`handle > ScaffdogError - without source 1`] = `
"
 ERROR  Compile Error

    message

"
`;

exports[`handle > ZodError 1`] = `
"
 ERROR  Parsing Error

    2 issues found
    - INVALID_TYPE: Expected string, received number (in \\"foo\\")
    - INVALID_TYPE: Expected number, received string (in \\"bar.baz\\")

"
`;

exports[`handle > unknown 1`] = `
"
 ERROR  Error null


"
`;
